Fixed brainmapper submission bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -402,7 +402,7 @@ color:white;
 }
 
 .aboutLists{
-  text-indent: 6vw;
+  margin-left:50%;
 }
 
 .space{
